--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,8 +26,8 @@ jobs:
       uses: ./.github/actions/deploy-launchpad
       with:
         changes_files: ${{ steps.package.outputs.changes_files }}
-        devel-repo: "ppa:texworks/ppa"
-        stable-repo: "ppa:texworks/stable"
+        devel-repo: "ppa:st.loeffler/test"
+        stable-repo: "ppa:st.loeffler/test"
 
 ################################################################################
 
