--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -107,9 +107,9 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        brew list
+        rm -f /usr/local/bin/2to3
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
-        brew install --force hunspell poppler lua qt5
+        brew install hunspell poppler lua qt5
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
