--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: docker build -f .github/workflows/Dockerfile.arch-qt6 .
+      # Use unconfined `docker run` instead of (confined) `docker build` as
+      # the latter blocks faccessat2 calls required by the latest pacman
+      run: docker run --security-opt seccomp=unconfined --volume $(pwd):/home/tw archlinux /bin/sh -c "/home/tw/.github/workflows/build.arch-qt6"
+#     run: docker build -f .github/workflows/Dockerfile.arch-qt6 .
 
 ################################################################################
 
