--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Install dependencies
       run: sudo apt install --assume-yes --no-install-recommends ghostscript imagemagick lmodern netpbm tex4ht texlive-fonts-recommended texlive-lang-french texlive-latex-base texlive-latex-extra texlive-luatex tidy
