<actions> Try to upload artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
     - name: Typeset
       run: make dist
 
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        path: |
+          pdf/**/*.pdf
+          html/*.zip
+
     - name: Package (Launchpad)
       id: package-launchpad
       uses: ./.github/actions/package-launchpad
