--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -121,6 +121,8 @@ jobs:
   macosx-artifactory:
     name: Mac OS X (Artifactory)
     runs-on: macos-latest
+    env:
+      MACOSX_DEPLOYMENT_TARGET=10.14
 
     steps:
     - name: Checkout
@@ -132,10 +134,13 @@ jobs:
         # but prevents the homebrew install from succeeding
         rm -f /usr/local/bin/2to3
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
-        brew install hunspell poppler lua qt5
+        brew install qt5
+        # Build these packages from source so they use the correct
+        # MACOSX_DEPLOYMENT_TARGET env var
+        brew install --build-from-source fontconfig hunspell poppler lua
 
     - name: Configure
-      run: MACOSX_DEPLOYMENT_TARGET=10.14 cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
+      run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="/usr/local/opt/qt5"
 
     - name: Build
       run: make -j
