--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -122,7 +122,7 @@ jobs:
     name: Mac OS X (Artifactory)
     runs-on: macos-latest
     env:
-      MACOSX_DEPLOYMENT_TARGET=10.14
+      MACOSX_DEPLOYMENT_TARGET: 10.14
 
     steps:
     - name: Checkout
