--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,7 @@ jobs:
 
 ################################################################################
 
-  build-macosx-macports:
+  build-macosx-buildall:
     name: Mac OS X (build-all)
     runs-on: macos-latest
     env:
