Move "Install Qt" to workflow file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,12 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    - name: Install Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        modules:
+          - qtscript
+
     - name: Install dependencies
       uses: ./.github/actions/setup-macos
 
