--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,8 +122,7 @@ jobs:
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
-        modules:
-          - qtscript
+        modules: qtscript
 
     - name: Install dependencies
       uses: ./.github/actions/setup-macos
