Fix lua install

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -111,6 +111,7 @@ ExternalProject_Add(lua
 	URL http://www.lua.org/ftp/lua-5.4.3.tar.gz
 	URL_HASH SHA1=1dda2ef23a9828492b4595c0197766de6e784bc7
 	CONFIGURE_COMMAND ""
-	BUILD_COMMAND make MYCFLAGS="-mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}" INSTALL_TOP="${CMAKE_INSTALL_PREFIX}"
+	BUILD_COMMAND make MYCFLAGS="-mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET}"
 	BUILD_IN_SOURCE TRUE
+	INSTALL_COMMAND make install INSTALL_TOP="${CMAKE_INSTALL_PREFIX}"
 )
