--- a/.github/actions/setup-macos/action.yml
+++ b/.github/actions/setup-macos/action.yml
@@ -9,6 +9,7 @@ runs:
       shell: bash
       run: |
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
+        brew uninstall brotli
         brew install automake gettext libtool pkg-config
 
     - name: Build dependencies
