--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,7 +143,7 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        path: build/${{ steps.package.outputs.file }}
+        path: build/*.dmg
 
 ################################################################################
 
