--- a/.github/actions/setup-macos/action.yml
+++ b/.github/actions/setup-macos/action.yml
@@ -9,8 +9,8 @@ runs:
       shell: bash
       run: |
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
-        brew uninstall --ignore-dependencies brotli fontconfig freetype libjpeg libpng libtiff webp zstd
-        brew install automake gettext libtool pkg-config
+        brew uninstall --ignore-dependencies brotli fontconfig freetype gettext libjpeg libpng libtiff webp zstd
+        brew install automake libtool pkg-config
 
     - name: Build dependencies
       shell: bash
