--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -111,10 +111,11 @@ ExternalProject_Add(gettext
 )
 ADD_GH_GROUP(gettext)
 
+set(FONTCONFIG_ARGS ${CONFIGURE_ARGS} --with-add-fonts="${_font_dirs}" --with-libintl-prefix="${CMAKE_INSTALL_PREFIX}")
 ExternalProject_Add(fontconfig
 	GIT_REPOSITORY https://gitlab.freedesktop.org/fontconfig/fontconfig.git
 	GIT_TAG 2.13.1
-	CONFIGURE_COMMAND autoreconf -vfi && ${CONFIGURE_ENV} ./configure ${CONFIGURE_ARGS} --with-add-fonts="${_font_dirs}" --with-libintl-prefix="${CMAKE_INSTALL_PREFIX}"
+	CONFIGURE_COMMAND autoreconf -vfi && ${CONFIGURE_ENV} ./configure ${FONTCONFIG_ARGS}
 	BUILD_IN_SOURCE TRUE
 	INSTALL_COMMAND make install RUN_FC_CACHE_TEST=false
 	DEPENDS freetype gettext
