Try to explicitly set CPPFLAGS and LDFLAGS

--- a/.github/actions/setup-macos/CMakeLists.txt
+++ b/.github/actions/setup-macos/CMakeLists.txt
@@ -115,7 +115,7 @@ set(FONTCONFIG_ARGS ${CONFIGURE_ARGS} --with-add-fonts="${_font_dirs}" --with-li
 ExternalProject_Add(fontconfig
 	URL https://www.freedesktop.org/software/fontconfig/release/fontconfig-2.13.1.tar.gz
 	URL_HASH SHA256=9f0d852b39d75fc655f9f53850eb32555394f36104a044bb2b2fc9e66dbbfa7f
-	CONFIGURE_COMMAND ${CONFIGURE_ENV} ./configure ${FONTCONFIG_ARGS}
+	CONFIGURE_COMMAND ${CONFIGURE_ENV} CPPFLAGS=-I${CMAKE_INSTALL_PREFIX}/include LDFLAGS=-L${CMAKE_INSTALL_PREFIX}/lib ./configure ${FONTCONFIG_ARGS}
 	BUILD_IN_SOURCE TRUE
 	INSTALL_COMMAND make install RUN_FC_CACHE_TEST=false
 	DEPENDS freetype gettext
