--- a/res/TeXworks.rc
+++ b/res/TeXworks.rc
@@ -35,4 +35,8 @@ BEGIN
     END
 END
 
+// Required by MinGW but breaks MSVC; configured by CMake
+#cmakedefine01 CREATE_MANIFEST
+#if CREATE_MANIFEST
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "@PROJECT_SOURCE_DIR@/res/TeXworks.exe.manifest"
+#endif
