--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,11 +127,11 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cmake -B "${RUNNER_WORKSPACE}/tw-deps-build" -S "${GITHUB_WORKSPACE}/.github/actions/msvc-dependencies" -DCMAKE_INSTALL_PREFIX="${RUNNER_WORKSPACE}/tw-deps"
-        cmake --build "${RUNNER_WORKSPACE}/tw-deps-build" --config Release
+        cmake -B "${{ runner.workspace }}/tw-deps-build" -S "${{ github.workspace }}/.github/actions/msvc-dependencies" -DCMAKE_INSTALL_PREFIX="${{ runner.workspace }}/tw-deps"
+        cmake --build "${{ runner.workspace }}/tw-deps-build" --config Release
 
     - name: Configure
-      run: cmake -B build -DTW_BUILD_ID='github' -DCMAKE_PREFIX_PATH="${RUNNER_WORKSPACE}/tw-deps"
+      run: cmake -B build -DTW_BUILD_ID='github' -DCMAKE_PREFIX_PATH="${{ runner.workspace }}/tw-deps"
 
     - name: Build
       run: cmake --build build
