--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,10 +136,11 @@ jobs:
     - name: Build
       run: cmake --build build --config Release
 
-    - name: Copy DLLs
+    - name: Prepare for testing
       run: |
+        cmake -E copy build/share build/Release/
+        cd "${{ runner.workspace }}/tw-deps/bin"
         cmake -E copy lcms2.dll libhunspell.dll libpng16.dll openjp2.dll poppler-qt5.dll zlib.dll "${{ github.workspace }}/build/Release/"
-      working-directory: ${{ runner.workspace }}/tw-deps/bin
 
     - name: Test
       run: ctest -V -C Release
