--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,7 +138,10 @@ jobs:
 
     - name: Prepare for testing
       run: |
+        dir build/Release/
         cmake -E copy build/share build/Release/
+        dir build/Release/
+        dir build/Release/share
         cd "${{ runner.workspace }}/tw-deps/bin"
         cmake -E copy lcms2.dll libhunspell.dll libpng16.dll openjp2.dll poppler-qt5.dll zlib.dll "${{ github.workspace }}/build/Release/"
 
