--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -95,6 +95,22 @@ jobs:
       uses: ./.github/actions/package-windows
       id: package
 
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: TeXworks-Windows
+        path: build/${{ steps.package.outputs.file }}
+
+    - name: Build installer
+      run: ISCC texworks-setup-script.iss
+      working-directory: win32
+
+    - name: Upload installer artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: TeXworks-Windows-Setup
+        path: win32/Output/*.exe
+
     - name: Deploy to Artifactory
       if: github.event_name == 'push'
       uses: ./.github/actions/deploy-artifactory
@@ -105,16 +121,6 @@ jobs:
           remotePath: ${{ steps.package.outputs.version }}
           username: st.loeffler@gmail.com
           key: ${{ secrets.jfrog_key }}
-
-    - name: Build installer
-      run: ISCC texworks-setup-script.iss
-      working-directory: win32
-
-    - name: Upload installer artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: installer-win
-        path: win32/Output/*.exe
 
 ################################################################################
 
@@ -148,6 +154,12 @@ jobs:
     - name: Package
       id: package
       uses: ./.github/actions/package-macos
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: TeXworks-macOS
+        path: build/${{ steps.package.outputs.file }}
 
     - name: Deploy to Artifactory
       if: github.event_name == 'push'
