--- a/.github/actions/package-macos/action.yml
+++ b/.github/actions/package-macos/action.yml
@@ -30,9 +30,9 @@ runs:
       id: info
       shell: bash
       run: |
-        FILENAME=$(find . -depth 1 -name 'TeXworks-macos-*.dmg')
-        VERSION=$(echo "$FILENAME" | sed -e 's/^\.\/TeXworks-macos-\([^-]*\)-.*\.dmg$/\1/')
-        FULLVERSION=$(echo "$FILENAME" | sed -e 's/^\.\/TeXworks-macos-\(.*\)\.dmg$/\1/')
+        FILENAME=$(find $(pwd) -depth 1 -name 'TeXworks-macos-*.dmg')
+        VERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-macos-\([^-]*\)-.*\.dmg$/\1/')
+        FULLVERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-macos-\(.*\)\.dmg$/\1/')
         echo "::set-output name=version::${VERSION}"
         echo "::set-output name=fullversion::${FULLVERSION}"
         echo "::set-output name=file::${FILENAME}"
