--- a/.github/actions/package-windows/action.yml
+++ b/.github/actions/package-windows/action.yml
@@ -30,9 +30,8 @@ runs:
     - name: Info
       shell: wsl-bash {0}
       id: info
-      working-directory: ${{ inputs.builddir }}
       run: |
-        FILENAME=$(find $(pwd) -maxdepth 1 -name 'TeXworks-win-*.zip')
+        FILENAME=$(find ${{ inputs.builddir }} -maxdepth 1 -name 'TeXworks-win-*.zip')
         VERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-win-\([^-]*\)-.*\.zip$/\1/')
         FULLVERSION=$(basename "$FILENAME" | sed -e 's/^TeXworks-win-\(.*\)\.zip$/\1/')
         echo "MD5"
