--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -131,8 +131,31 @@ jobs:
       with:
         modules: qtscript
 
-    - name: Install Dependencies
-      uses: ./.github/actions/setup-macos
+    - name: Install Homebrew dependencies
+      shell: bash
+      run: |
+        brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
+        brew uninstall --ignore-dependencies brotli fontconfig freetype libjpeg libpng libtiff webp zstd
+        brew install automake libtool pkg-config
+
+    - name: Cache dependencies
+      id: cache-dependencies
+      uses: actions/cache@v2
+      with:
+        key: ${{ runner.os }}-deps-${{ hashFiles('./.github/actions/setup-macos/*') }}
+        path: |
+          ${RUNNER_WORKSPACE}/tw-deps
+
+    - name: Build dependencies
+      if: steps.cache-dependencies.cache-hit == false
+      shell: bash
+      run: |
+        cmake -S "${{ github.action_path }}" -B "${{ github.action_path }}/build" -DCMAKE_INSTALL_PREFIX=${RUNNER_WORKSPACE}/tw-deps
+        PKG_CONFIG_PATH=${RUNNER_WORKSPACE}/tw-deps/lib/pkgconfig cmake --build "${{ github.action_path }}/build" -v
+
+#    - name: Install Dependencies
+#      uses: ./.github/actions/setup-macos
+
 
     - name: Configure
       run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="${RUNNER_WORKSPACE}/tw-deps" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
