--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -144,21 +144,21 @@ jobs:
       with:
         key: ${{ runner.os }}-deps-${{ hashFiles('./.github/actions/setup-macos/*') }}
         path: |
-          ${RUNNER_WORKSPACE}/tw-deps
+          ${{ runner.temp }/tw-deps
 
     - name: Build dependencies
       if: steps.cache-dependencies.cache-hit == false
       shell: bash
       run: |
-        cmake -S ".github/actions/setup-macos" -B ".github/actions/setup-macos/build" -DCMAKE_INSTALL_PREFIX=${RUNNER_WORKSPACE}/tw-deps
-        PKG_CONFIG_PATH=${RUNNER_WORKSPACE}/tw-deps/lib/pkgconfig cmake --build ".github/actions/setup-macos/build" -v
+        cmake -S ".github/actions/setup-macos" -B ".github/actions/setup-macos/build" -DCMAKE_INSTALL_PREFIX=${RUNNER_TEMP}/tw-deps
+        PKG_CONFIG_PATH=${RUNNER_TEMP}/tw-deps/lib/pkgconfig cmake --build ".github/actions/setup-macos/build" -v
 
 #    - name: Install Dependencies
 #      uses: ./.github/actions/setup-macos
 
 
     - name: Configure
-      run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="${RUNNER_WORKSPACE}/tw-deps" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
+      run: cmake -B build -DTW_BUILD_ID='github' ${GITHUB_WORKSPACE} -DCMAKE_PREFIX_PATH="${RUNNER_TEMP}/tw-deps" -DCMAKE_INSTALL_RPATH_USE_LINK_PATH=TRUE
 
     - name: Build
       run: cmake --build build -j
