--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -142,7 +142,7 @@ jobs:
       id: cache-dependencies
       uses: actions/cache@v2
       with:
-        key: ${{ runner.os }}-deps-${{ hashFiles('./.github/actions/setup-macos/*') }}
+        key: twdeps-${{ runner.os }}-${{ hashFiles('./.github/actions/setup-macos/*') }}
         path: |
           ${{ runner.temp }}/tw-deps
 
