Try to switch to ppa:st.loeffler/mxe-texworks

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,6 +43,8 @@ jobs:
 
     - name: Setup WSL
       uses: Vampire/setup-wsl@v1
+      with:
+        distribution: Ubuntu-20.04
 
     - name: Install dependencies
       uses: ./.github/actions/setup-windows
