--- a/.github/actions/setup-windows/action.yml
+++ b/.github/actions/setup-windows/action.yml
@@ -15,7 +15,7 @@ runs:
         time sudo add-apt-repository --yes ppa:st.loeffler/mxe-texworks
         time sudo apt update
         time sudo apt install --assume-yes --no-install-recommends cmake git libgdk-pixbuf2.0-dev lzip make patch python wget xz-utils zip \
-          mxe-i686-w64-mingw32.static-cairo mxe-i686-w64-mingw32.static-curl mxe-i686-w64-mingw32.static-freetype mxe-i686-w64-mingw32.static-glib mxe-i686-w64-mingw32.static-hunspell mxe-i686-w64-mingw32.static-jpeg mxe-i686-w64-mingw32.static-lcms mxe-i686-w64-mingw32.static-libpng mxe-i686-w64-mingw32.static-libwebp mxe-i686-w64-mingw32.static-lua mxe-i686-w64-mingw32.static-openjpeg mxe-i686-w64-mingw32.static-qtbase mxe-i686-w64-mingw32.static-qtdeclarative mxe-i686-w64-mingw32.static-qtscript mxe-i686-w64-mingw32.static-qttools mxe-i686-w64-mingw32.static-tiff mxe-i686-w64-mingw32.static-zlib
+          mxe-x86-64-w64-mingw32.static-cairo mxe-x86-64-w64-mingw32.static-curl mxe-x86-64-w64-mingw32.static-freetype mxe-x86-64-w64-mingw32.static-glib mxe-x86-64-w64-mingw32.static-hunspell mxe-x86-64-w64-mingw32.static-jpeg mxe-x86-64-w64-mingw32.static-lcms mxe-x86-64-w64-mingw32.static-libpng mxe-x86-64-w64-mingw32.static-libwebp mxe-x86-64-w64-mingw32.static-lua mxe-x86-64-w64-mingw32.static-openjpeg mxe-x86-64-w64-mingw32.static-qtbase mxe-x86-64-w64-mingw32.static-qtdeclarative mxe-x86-64-w64-mingw32.static-qtscript mxe-x86-64-w64-mingw32.static-qttools mxe-x86-64-w64-mingw32.static-tiff mxe-x86-64-w64-mingw32.static-zlib
 
         time sudo chmod --recursive a+w /usr/lib/mxe
         time rm -f "/usr/lib/mxe/usr/i686-w64-mingw32.static/share/cmake/mxe-conf.d/ccache.cmake"
