--- a/.github/actions/setup-windows/action.yml
+++ b/.github/actions/setup-windows/action.yml
@@ -18,14 +18,14 @@ runs:
           mxe-x86-64-w64-mingw32.static-cairo mxe-x86-64-w64-mingw32.static-curl mxe-x86-64-w64-mingw32.static-freetype mxe-x86-64-w64-mingw32.static-glib mxe-x86-64-w64-mingw32.static-hunspell mxe-x86-64-w64-mingw32.static-jpeg mxe-x86-64-w64-mingw32.static-lcms mxe-x86-64-w64-mingw32.static-libpng mxe-x86-64-w64-mingw32.static-libwebp mxe-x86-64-w64-mingw32.static-lua mxe-x86-64-w64-mingw32.static-openjpeg mxe-x86-64-w64-mingw32.static-qtbase mxe-x86-64-w64-mingw32.static-qtdeclarative mxe-x86-64-w64-mingw32.static-qtscript mxe-x86-64-w64-mingw32.static-qttools mxe-x86-64-w64-mingw32.static-tiff mxe-x86-64-w64-mingw32.static-zlib
 
         time sudo chmod --recursive a+w /usr/lib/mxe
-        time rm -f "/usr/lib/mxe/usr/i686-w64-mingw32.static/share/cmake/mxe-conf.d/ccache.cmake"
+        time rm -f "/usr/lib/mxe/usr/x86_64-w64-mingw32.static/share/cmake/mxe-conf.d/ccache.cmake"
 
-    - name: Build poppler
-      shell: wsl-bash {0}
-      run: |
-        time rm -f /usr/lib/mxe/src/poppler*
-        time cp .github/actions/setup-windows/mxe/poppler* /usr/lib/mxe/src/
-        time cd /usr/lib/mxe
-        time make download-only-poppler
-        time make build-only-poppler_i686-w64-mingw32.static
+#    - name: Build poppler
+#      shell: wsl-bash {0}
+#      run: |
+#        time rm -f /usr/lib/mxe/src/poppler*
+#        time cp .github/actions/setup-windows/mxe/poppler* /usr/lib/mxe/src/
+#        time cd /usr/lib/mxe
+#        time make download-only-poppler
+#        time make build-only-poppler_i686-w64-mingw32.static
 
